cmake_minimum_required(VERSION 3.0)
project(NatNetC)
set(SOURCE_DIR NatNetC)
find_library(YAML NAMES yaml)
file(GLOB SOURCES "${SOURCE_DIR}/NatNet*.c")
include_directories(include)
set(CMAKE_C_FLAGS "-std=c99")
execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpmachine OUTPUT_VARIABLE TARGET_PLATFORM)
string(REGEX MATCH i586-poky-linux IS_POKY_LINUX ${TARGET_PLATFORM})
if(IS_POKY_LINUX)
  message(STATUS "Building for i586-poky-linux (Edison) platform")
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DPOKY_LINUX=1") 
endif()

add_library(NatNetC_static STATIC ${SOURCES})
target_include_directories(NatNetC_static PRIVATE /usr/local/include)
target_compile_definitions(NatNetC_static PRIVATE -DNATNET_YAML=1)
target_link_libraries(NatNetC_static ${YAML})

add_library(NatNetC SHARED ${SOURCES})
target_include_directories(NatNetC PRIVATE /usr/local/include)
target_compile_definitions(NatNetC PRIVATE -DNATNET_YAML=1)
target_link_libraries(NatNetC ${YAML})

add_executable(NatNetCLI NatNetCLI/NatNetMain.c)
target_link_libraries(NatNetCLI NatNetC_static)
target_link_libraries(NatNetCLI pthread)
# install(TARGETS mm_gps_test DESTINATION bin)